--- a/notebooks/ml/Parallel_Experiments/TensorFlow/evolutionary_search/automl_fashion_mnist.ipynb
+++ b/notebooks/ml/Parallel_Experiments/TensorFlow/evolutionary_search/automl_fashion_mnist.ipynb
@@ -7,69 +7,80 @@
     "# Getting started: Fashion Mnist on Hops Notebook\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 1.10</h3></font>\n",
-    "\n",
-    "In this notebook we are going to master running Deep Learning code on Hops using Jupyter notebooks and HopsFS, the highly efficient distributed file system that Hops provides. HopsFS is a fork of Apache HDFS and operations for reading and writing files to HopsFS is the same as with HDFS that TensorFlow supports.\n",
-    "For more information about how to read from HDFS, please see: https://www.tensorflow.org/deploy/hadoop\n",
-    "\n",
-    "In this example program we are going to:\n",
-    "- Run Fashion Mnist code using `tf.contrib.learn.Experiment` and `tf.estimator.Estimator`\n",
-    "- Using the hops python library to run TensorFlow on the Hops Platform\n",
-    "- Read data from a Dataset which is located in your project, on HopsFS (HDFS)\n",
-    "- Define a convolutional neural network\n",
-    "- Search for best hyperparameters given some search space\n",
-    "- Run training for each combination of hyperparameters using the Experiment API\n",
-    "- Monitor training using TensorBoard to see accuracy and loss for every hyperparameter configuration\n",
-    "- Monitoring training by looking at logs\n",
-    "- Find where the model and TensorBoard events for each hyperparameter configuration is saved in your project\n",
-    "- Visualize TensorBoard events from the previous TensorBoard run\n",
-    "\n",
-    "## Table of contents:\n",
-    "\n",
-    "### [TensorFlow on Hops](#paradigm)\n",
-    "### [Fashion Mnist training on Hops](#mnist)\n",
-    "### [Hyperparameter search](#hyperparam)\n",
-    "### [Launching TensorFlow jobs](#starting)\n",
-    "### [Monitoring execution - TensorBoard](#tensorboard)\n",
-    "### [Monitoring execution - Logs](#logs)\n",
-    "### [Increasing throughput - Running jobs in parallel](#parallel)\n",
-    "### [Show TensorBoard from previous runs](#visualize)\n"
+    "<font color='red'> <h3>Tested with TensorFlow 1.14</h3></font>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hops TensorFlow programming paradigm <a class=\"anchor\" id='paradigm'></a>\n",
+    "<p>\n",
+    "<h1>Machine Learning on <a href=\"https://github.com/logicalclocks/hopsworks\">Hopsworks\n",
+    "</a></h1> \n",
+    "</p>\n",
     "\n",
-    "To be able to run your TensorFlow code on Hops, the code for the whole program needs to be provided and put inside a wrapper function. Everything, from importing libraries to reading data and defining the model and running the program needs to be put inside a wrapper function.\n",
-    "\n",
-    "You can also submit one or more `.py`, `.zip` or `.egg` files that contain your code and import them in the wrapper function. To include files, navigate back to HopsWorks and restart restart Jupyter, you can then include files in the Jupyter configuration.\n",
+    "![hops.png](../../../images/hops.png)\n",
     "\n",
     "## The `hops` python module\n",
     "\n",
-    "Below you can see the aforementioned wrapper function, which is coincidently named `wrapper` but could potentially be named anything. You can see two imports from the `hops` module, a `tensorboard` and an `hdfs` module. These are the only two modules that you will need to use in your TensorFlow wrapper function. \n",
+    "`hops` is a helper library for Hops that facilitates development by hiding the complexity of running applications and iteracting with services.\n",
+    "\n",
+    "Have a feature request or encountered an issue? Please let us know on <a href=\"https://github.com/logicalclocks/hops-util-py\">github</a>.\n",
+    "\n",
+    "### Using the `experiment` module\n",
+    "\n",
+    "To be able to run your Machine Learning code in Hopsworks, the code for the whole program needs to be provided and put inside a wrapper function. Everything, from importing libraries to reading data and defining the model and running the program needs to be put inside a wrapper function.\n",
+    "\n",
+    "The `experiment` module provides an api to Python programs such as TensorFlow, Keras and PyTorch on a Hopsworks on any number of machines and GPUs.\n",
+    "\n",
+    "An Experiment could be a single Python program, which we refer to as an **Experiment**. \n",
+    "\n",
+    "Grid search or genetic hyperparameter optimization such as differential evolution which runs several Experiments in parallel, which we refer to as **Parallel Experiment**. \n",
+    "\n",
+    "ParameterServerStrategy, CollectiveAllReduceStrategy and MultiworkerMirroredStrategy making multi-machine/multi-gpu training as simple as invoking a function for orchestration. This mode is referred to as **Distributed Training**.\n",
     "\n",
     "### Using the `tensorboard` module\n",
-    "The `tensorboard` module allow us to get the log directory for summaries and checkpoints to be written to the TensorBoard we will see in a bit. The only function that we currently need to call is `tensorboard.logdir()`, which returns the path to the TensorBoard log directory. Furthermore, the content of this directory will be put in as a Dataset in your project in HopsFS after each hyperparameter configuration is finished. The `experiment.launch` function, that we will look at abit further down will return the exact path, which you can then navigate to using HopsWorks to inspect the files.\n",
+    "The `tensorboard` module allow us to get the log directory for summaries and checkpoints to be written to the TensorBoard we will see in a bit. The only function that we currently need to call is `tensorboard.logdir()`, which returns the path to the TensorBoard log directory. Furthermore, the content of this directory will be put in as a Dataset in your project's Experiments folder.\n",
     "\n",
-    "The directory could in practice be used to store other data that should be accessible after each hyperparameter configuration is finished.\n",
+    "The directory could in practice be used to store other data that should be accessible after the experiment is finished.\n",
     "```python\n",
     "# Use this module to get the TensorBoard logdir\n",
     "from hops import tensorboard\n",
     "tensorboard_logdir = tensorboard.logdir()\n",
     "```\n",
     "\n",
-    "\n",
     "### Using the `hdfs` module\n",
-    "The `hdfs` module provides a single method to get the path in HopsFS where your data is stored, namely by calling `hdfs.project_path()`. The path resolves to the root path for your project, which is the view that you see when you click `Data Sets` in HopsWorks. To point where your actual data resides in the project you to append the full path from there to your Dataset. For example if you create a mnist folder in your Resources Dataset, which is created automatically for each project, the path to the mnist data would be `hdfs.project_path() + 'Resources/mnist`\n",
+    "The `hdfs` module provides a method to get the path in HopsFS where your data is stored, namely by calling `hdfs.project_path()`. The path resolves to the root path for your project, which is the view that you see when you click `Data Sets` in HopsWorks. To point where your actual data resides in the project you to append the full path from there to your Dataset. For example if you create a mnist folder in your Resources Dataset, the path to the mnist data would be `hdfs.project_path() + 'Resources/mnist'`\n",
+    "\n",
     "```python\n",
     "# Use this module to get the path to your project in HopsFS, then append the path to your Dataset in your project\n",
     "from hops import hdfs\n",
     "project_path = hdfs.project_path()\n",
     "```\n",
     "\n",
-    "![image11-Dataset-ProjectPath.png](../../../images/datasets.png)"
+    "```python\n",
+    "# Downloading the mnist dataset to the current working directory\n",
+    "from hops import hdfs\n",
+    "mnist_hdfs_path = hdfs.project_path() + \"Resources/mnist\"\n",
+    "local_mnist_path = hdfs.copy_to_local(mnist_hdfs_path)\n",
+    "```\n",
+    "\n",
+    "### Documentation\n",
+    "See the following links to learn more about running experiments in Hopsworks\n",
+    "\n",
+    "- <a href=\"https://hopsworks.readthedocs.io/en/latest/hopsml/experiment.html\">Learn more about experiments</a>\n",
+    "<br>\n",
+    "- <a href=\"https://hopsworks.readthedocs.io/en/latest/hopsml/hopsML.html\">Building End-To-End pipelines</a>\n",
+    "<br>\n",
+    "- Give us a star, create an issue or a feature request on  <a href=\"https://github.com/logicalclocks/hopsworks\">Hopsworks github</a>\n",
+    "\n",
+    "### Managing experiments\n",
+    "Experiments service provides a unified view of all the experiments run using the `experiment` module.\n",
+    "<br>\n",
+    "As demonstrated in the gif it provides general information about the experiment and the resulting metric. Experiments can be visualized meanwhile or after training in a TensorBoard.\n",
+    "<br>\n",
+    "<br>\n",
+    "![Image7-Monitor.png](../../../images/experiments.gif)"
    ]
   },
   {
@@ -80,19 +91,38 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### The wrapper function\n",
-    "\n",
-    "Here we define the aforementioned wrapper function containing the code to run, with the hyperparameter arguments `learning_rate` and `dropout`. It simply contains all the TensorFlow code that we want to run."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Spark application\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>2</td><td>application_1571078644231_0003</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1571078644231_0003/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1571078644231_0003_01_000001/OreillyAI__meb10000\">Link</a></td><td>✔</td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparkSession available as 'spark'.\n"
+     ]
+    }
+   ],
    "source": [
     "def wrapper(learning_rate, dropout):\n",
     "\n",
@@ -102,15 +132,15 @@
     "    from hops import hdfs\n",
     "\n",
     "    # Training Parameters\n",
-    "    num_steps = 20\n",
-    "    batch_size = 128\n",
+    "    num_steps = 200\n",
+    "    batch_size = 10\n",
     "\n",
     "    # Network Parameters\n",
     "    num_input = 784 # MNIST data input (img shape: 28*28)\n",
     "    num_classes = 10 # MNIST total classes (0-9 digits)\n",
     "\n",
-    "    train_filenames = [hdfs.project_path() + \"TourData/mnist/train/train.tfrecords\"]\n",
-    "    validation_filenames = [hdfs.project_path() + \"TourData/mnist/validation/validation.tfrecords\"]\n",
+    "    train_filenames = [hdfs.project_path() + \"Resources/train.tfrecords\"]\n",
+    "    validation_filenames = [hdfs.project_path() + \"Resources/validation.tfrecords\"]\n",
     "\n",
     "    # Create the neural network\n",
     "    # TF Estimator input is a dict, in case of multiple inputs\n",
@@ -125,12 +155,12 @@
     "            x = tf.reshape(x, shape=[-1, 28, 28, 1])\n",
     "\n",
     "            # Convolution Layer with 32 filters and a kernel size of 5\n",
-    "            conv1 = tf.layers.conv2d(x, 32, 5, activation=tf.nn.relu)\n",
+    "            conv1 = tf.layers.conv2d(x, 32, 2, activation=tf.nn.relu)\n",
     "            # Max Pooling (down-sampling) with strides of 2 and kernel size of 2\n",
     "            conv1 = tf.layers.max_pooling2d(conv1, 2, 2)\n",
     "\n",
     "            # Convolution Layer with 32 filters and a kernel size of 5\n",
-    "            conv2 = tf.layers.conv2d(conv1, 64, 3, activation=tf.nn.relu)\n",
+    "            conv2 = tf.layers.conv2d(conv1, 64, 2, activation=tf.nn.relu)\n",
     "            # Max Pooling (down-sampling) with strides of 2 and kernel size of 2\n",
     "            conv2 = tf.layers.max_pooling2d(conv2, 2, 2)\n",
     "\n",
@@ -229,9 +259,9 @@
     "\n",
     "    run_config = tf.contrib.learn.RunConfig(\n",
     "        model_dir=tensorboard.logdir(),\n",
-    "        save_checkpoints_steps=5,\n",
-    "        save_summary_steps=5,\n",
-    "        log_step_count_steps=5)\n",
+    "        save_checkpoints_steps=10,\n",
+    "        save_summary_steps=10,\n",
+    "        log_step_count_steps=10)\n",
     "\n",
     "    hparams = tf.contrib.training.HParams(\n",
     "        learning_rate=learning_rate, dropout_rate=dropout)\n",
@@ -256,15 +286,17 @@
     "        train_input_fn=train_input_fn,\n",
     "        eval_input_fn=eval_input_fn,\n",
     "        train_steps=num_steps,\n",
-    "        min_eval_frequency=5,\n",
+    "        min_eval_frequency=10,\n",
     "        eval_hooks=[summary_hook]\n",
     "    )\n",
     "\n",
     "    experiment.train_and_evaluate()\n",
     "    \n",
-    "    accuracy_score = mnist_estimator.evaluate(input_fn=eval_input_fn, steps=num_steps)[\"accuracy\"]\n",
+    "    evaluate = mnist_estimator.evaluate(input_fn=eval_input_fn, steps=num_steps)\n",
+    "    accuracy = evaluate[\"accuracy\"]\n",
+    "    loss = evaluate[\"loss\"]\n",
     "    \n",
-    "    return accuracy_score\n"
+    "    return {'accuracy': accuracy, 'loss': loss}\n"
    ]
   },
   {
@@ -278,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -290,27 +322,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/hopsworks-api/api/project/119/experiments/application_1571078644231_0003_1?xattr=CREATE\n",
+      "<Response [201]>\n",
+      "Generation 1 || average metric: 0.7899, best metric: 0.8075, best parameter combination: ['learning_rate=0.001', 'dropout=0.5813233111981606']\n",
+      "\n",
+      "Generation 2 || average metric: 0.7899, best metric: 0.8075, best parameter combination: ['learning_rate=0.001', 'dropout=0.5813233111981606']\n",
+      "\n",
+      "Generation 3 || average metric: 0.7899, best metric: 0.8075, best parameter combination: ['learning_rate=0.001', 'dropout=0.5813233111981606']\n",
+      "\n",
+      "Generation 4 || average metric: 0.7899, best metric: 0.8075, best parameter combination: ['learning_rate=0.001', 'dropout=0.5813233111981606']\n",
+      "\n",
+      "Finished Experiment \n",
+      "\n",
+      "/hopsworks-api/api/project/119/experiments/application_1571078644231_0003_1?xattr=REPLACE\n",
+      "<Response [200]>\n",
+      "('hdfs://10.0.2.15:8020/Projects/OreillyAI/Experiments/application_1571078644231_0003_1/generation.1/learning_rate=0.001&dropout=0.5813233111981606', {'learning_rate': '0.001', 'dropout': '0.5813233111981606'}, {'accuracy': '0.8075', 'loss': '0.58013296'})"
+     ]
+    }
+   ],
    "source": [
     "from hops import experiment\n",
     "from hops import hdfs\n",
     "\n",
-    "experiment.differential_evolution(wrapper, search_dict, direction='max', generations=4, population=5,\n",
-    "                       name='fashion mnist grid search', \n",
-    "                       description='Demonstration of running gridsearch hyperparameter optimization with fashion mnist')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Monitoring execution - TensorBoard <a class=\"anchor\" id='tensorboard'></a>\n",
-    "To find the TensorBoard for the execution, please go back to HopsWorks and enter the Experiments service.\n",
-    "Then copy & paste the experiment_id into the textbox and press enter to start a TensorBoard to see all experiments being run in parallel.\n",
-    "![Image7-Monitor.png](../../../images/experiments_service.png)\n",
-    "![Image7-Monitor.png](../../../images/tensorboard.png)"
+    "experiment.differential_evolution(\n",
+    "    wrapper, \n",
+    "    search_dict, \n",
+    "    direction='max', \n",
+    "    generations=4, \n",
+    "    population=5,                       \n",
+    "    name='fashion mnist autoML', \n",
+    "    optimization_key='accuracy',\n",
+    "    description='Demonstration of running automl hyperparameter optimization with fashion mnist',\n",
+    "    local_logdir=True\n",
+    ")"
    ]
   }
  ],
@@ -331,5 +382,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
