--- a/notebooks/ml/Benchmarks/benchmark.ipynb
+++ b/notebooks/ml/Benchmarks/benchmark.ipynb
@@ -4,51 +4,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Benchmark GPU vs CPU\n",
+    "# Benchmark GPU vs CPU & multi-host vs single host\n",
     "---\n",
     "\n",
-    "This notebook can be used to benchmark performance using CPU, a single GPU or many GPUs."
+    "This notebook can be used to benchmark performance using CPU, a single GPU or many GPUs.\n",
+    "\n",
+    "<font color='red'> <h3>Tested with TensorFlow 1.14</h3></font>\n",
+    "\n",
+    "<p>\n",
+    "<h1>Machine Learning on <a href=\"https://github.com/logicalclocks/hopsworks\">Hopsworks\n",
+    "</a></h1> \n",
+    "</p>\n",
+    "\n",
+    "![hops.png](../../../images/hops.png)\n",
+    "\n",
+    "## The `hops` python module\n",
+    "\n",
+    "`hops` is a helper library for Hops that facilitates development by hiding the complexity of running applications and iteracting with services.\n",
+    "\n",
+    "Have a feature request or encountered an issue? Please let us know on <a href=\"https://github.com/logicalclocks/hops-util-py\">github</a>.\n",
+    "\n",
+    "### Using the `experiment` module\n",
+    "\n",
+    "To be able to run your Machine Learning code in Hopsworks, the code for the whole program needs to be provided and put inside a wrapper function. Everything, from importing libraries to reading data and defining the model and running the program needs to be put inside a wrapper function.\n",
+    "\n",
+    "The `experiment` module provides an api to Python programs such as TensorFlow, Keras and PyTorch on a Hopsworks on any number of machines and GPUs.\n",
+    "\n",
+    "An Experiment could be a single Python program, which we refer to as an **Experiment**. \n",
+    "\n",
+    "Grid search or genetic hyperparameter optimization such as differential evolution which runs several Experiments in parallel, which we refer to as **Parallel Experiment**. \n",
+    "\n",
+    "ParameterServerStrategy, CollectiveAllReduceStrategy and MultiworkerMirroredStrategy making multi-machine/multi-gpu training as simple as invoking a function for orchestration. This mode is referred to as **Distributed Training**.\n",
+    "\n",
+    "### Using the `tensorboard` module\n",
+    "The `tensorboard` module allow us to get the log directory for summaries and checkpoints to be written to the TensorBoard we will see in a bit. The only function that we currently need to call is `tensorboard.logdir()`, which returns the path to the TensorBoard log directory. Furthermore, the content of this directory will be put in as a Dataset in your project's Experiments folder.\n",
+    "\n",
+    "The directory could in practice be used to store other data that should be accessible after the experiment is finished.\n",
+    "```python\n",
+    "# Use this module to get the TensorBoard logdir\n",
+    "from hops import tensorboard\n",
+    "tensorboard_logdir = tensorboard.logdir()\n",
+    "```\n",
+    "\n",
+    "### Using the `hdfs` module\n",
+    "The `hdfs` module provides a method to get the path in HopsFS where your data is stored, namely by calling `hdfs.project_path()`. The path resolves to the root path for your project, which is the view that you see when you click `Data Sets` in HopsWorks. To point where your actual data resides in the project you to append the full path from there to your Dataset. For example if you create a mnist folder in your Resources Dataset, the path to the mnist data would be `hdfs.project_path() + 'Resources/mnist'`\n",
+    "\n",
+    "```python\n",
+    "# Use this module to get the path to your project in HopsFS, then append the path to your Dataset in your project\n",
+    "from hops import hdfs\n",
+    "project_path = hdfs.project_path()\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "# Downloading the mnist dataset to the current working directory\n",
+    "from hops import hdfs\n",
+    "mnist_hdfs_path = hdfs.project_path() + \"Resources/mnist\"\n",
+    "local_mnist_path = hdfs.copy_to_local(mnist_hdfs_path)\n",
+    "```\n",
+    "\n",
+    "### Documentation\n",
+    "See the following links to learn more about running experiments in Hopsworks\n",
+    "\n",
+    "- <a href=\"https://hopsworks.readthedocs.io/en/latest/hopsml/experiment.html\">Learn more about experiments</a>\n",
+    "<br>\n",
+    "- <a href=\"https://hopsworks.readthedocs.io/en/latest/hopsml/hopsML.html\">Building End-To-End pipelines</a>\n",
+    "<br>\n",
+    "- Give us a star, create an issue or a feature request on  <a href=\"https://github.com/logicalclocks/hopsworks\">Hopsworks github</a>\n",
+    "\n",
+    "### Managing experiments\n",
+    "Experiments service provides a unified view of all the experiments run using the `experiment` module.\n",
+    "<br>\n",
+    "As demonstrated in the gif it provides general information about the experiment and the resulting metric. Experiments can be visualized meanwhile or after training in a TensorBoard.\n",
+    "<br>\n",
+    "<br>\n",
+    "![Image7-Monitor.png](../../../images/experiments.gif)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting Spark application\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>1102</td><td>application_1549714785003_1348</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hadoop33:8088/proxy/application_1549714785003_1348/\">Link</a></td><td><a target=\"_blank\" href=\"http://gpu1:8042/node/containerlogs/container_e70_1549714785003_1348_01_000001/dwadaw__robin_er\">Link</a></td><td>✔</td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SparkSession available as 'spark'.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def wrapper():\n",
     "    import tensorflow as tf\n",
     "    \n",
     "    # Wrapper for keras_applications, you can import any model you want to try (like ResNet50)\n",
-    "    from tensorflow.keras.applications import VGG19\n",
+    "    from tensorflow.keras.applications import ResNet50\n",
     "\n",
     "    import numpy as np\n",
     "    \n",
@@ -57,7 +99,7 @@
     "    # Utility module for getting number of GPUs accessible by the container (Spark Executor)\n",
     "    from hops import devices\n",
     "\n",
-    "    batch_size = 32 # Number of samples to process on each GPU every iteration\n",
+    "    batch_size = 8 # Number of samples to process on each GPU every iteration\n",
     "    \n",
     "    # Image dimensions\n",
     "    height = 224\n",
@@ -67,7 +109,7 @@
     "    \n",
     "    num_iterations = 5000 # Number of iterations, increase to run longer\n",
     "    \n",
-    "    model = VGG19(weights=None, input_shape=(height, width, channels), classes=num_classes)\n",
+    "    model = ResNet50(weights=None, input_shape=(height, width, channels), classes=num_classes)\n",
     "        \n",
     "    optimizer = tf.train.RMSPropOptimizer(0.2)\n",
     "    model.compile(loss='categorical_crossentropy', optimizer=optimizer)\n",
@@ -128,5 +170,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
