--- a/notebooks/ml/Experiment/TensorFlow/minimal_mnist_classifier_on_hops.ipynb
+++ b/notebooks/ml/Experiment/TensorFlow/minimal_mnist_classifier_on_hops.ipynb
@@ -7,50 +7,115 @@
     "# Minimal mnist example on Hopsworks\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 1.10</h3></font>"
+    "<font color='red'> <h3>Tested with TensorFlow 1.14</h3></font>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hops Experiment paradigm <a class=\"anchor\" id='paradigm'></a>\n",
+    "<p>\n",
+    "<h1>Machine Learning on <a href=\"https://github.com/logicalclocks/hopsworks\">Hopsworks\n",
+    "</a></h1> \n",
+    "</p>\n",
     "\n",
-    "To be able to run your TensorFlow code on Hops, the code for the whole program needs to be provided and put inside a wrapper function. Everything, from importing libraries to reading data and defining the model and running the program needs to be put inside a wrapper function. If you wish to run gridsearch over a given set of hyperparameters, you can define arguments for this wrapper function that corresponds to the name of your hyperparameters.\n",
-    "\n",
-    "You can also submit one or more `.py`, `.zip` or `.egg` files that contain your code and import them in the wrapper function. To include files, navigate back to HopsWorks and restart restart Jupyter, you can then include files in the Jupyter configuration.\n",
+    "![hops.png](../../images/hops.png)\n",
     "\n",
     "## The `hops` python module\n",
     "\n",
-    "Below you can see the aforementioned wrapper function, which is coincidently named `wrapper` but could potentially be named anything. You can see two imports from the `hops` module, a `tensorboard` and an `hdfs` module. These are the only two modules that you will need to use in your TensorFlow wrapper function. \n",
+    "`hops` is a helper library for Hops that facilitates development by hiding the complexity of running applications and iteracting with services.\n",
+    "\n",
+    "Have a feature request or encountered an issue? Please let us know on <a href=\"https://github.com/logicalclocks/hops-util-py\">github</a>.\n",
+    "\n",
+    "### Using the `experiment` module\n",
+    "\n",
+    "To be able to run your Machine Learning code in Hopsworks, the code for the whole program needs to be provided and put inside a wrapper function. Everything, from importing libraries to reading data and defining the model and running the program needs to be put inside a wrapper function.\n",
+    "\n",
+    "The `experiment` module provides an api to Python programs such as TensorFlow, Keras and PyTorch on a Hopsworks on any number of machines and GPUs.\n",
+    "\n",
+    "An Experiment could be a single Python program, which we refer to as an **Experiment**. \n",
+    "\n",
+    "Grid search or genetic hyperparameter optimization such as differential evolution which runs several Experiments in parallel, which we refer to as **Parallel Experiment**. \n",
+    "\n",
+    "ParameterServerStrategy, CollectiveAllReduceStrategy and MultiworkerMirroredStrategy making multi-machine/multi-gpu training as simple as invoking a function for orchestration. This mode is referred to as **Distributed Training**.\n",
     "\n",
     "### Using the `tensorboard` module\n",
-    "The `tensorboard` module allow us to get the log directory for summaries and checkpoints to be written to the TensorBoard we will see in a bit. The only function that we currently need to call is `tensorboard.logdir()`, which returns the path to the TensorBoard log directory. Furthermore, the content of this directory will be put in as a Dataset in your project in HopsFS after each hyperparameter configuration is finished. The `experiment.launch` function, that we will look at abit further down will return the exact path, which you can then navigate to using HopsWorks to inspect the files.\n",
+    "The `tensorboard` module allow us to get the log directory for summaries and checkpoints to be written to the TensorBoard we will see in a bit. The only function that we currently need to call is `tensorboard.logdir()`, which returns the path to the TensorBoard log directory. Furthermore, the content of this directory will be put in as a Dataset in your project's Experiments folder.\n",
     "\n",
-    "The directory could in practice be used to store other data that should be accessible after each hyperparameter configuration is finished.\n",
+    "The directory could in practice be used to store other data that should be accessible after the experiment is finished.\n",
     "```python\n",
     "# Use this module to get the TensorBoard logdir\n",
     "from hops import tensorboard\n",
     "tensorboard_logdir = tensorboard.logdir()\n",
     "```\n",
     "\n",
-    "\n",
     "### Using the `hdfs` module\n",
-    "The `hdfs` module provides a single method to get the path in HopsFS where your data is stored, namely by calling `hdfs.project_path()`. The path resolves to the root path for your project, which is the view that you see when you click `Data Sets` in HopsWorks. To point where your actual data resides in the project you to append the full path from there to your Dataset. For example if you create a mnist folder in your Resources Dataset, which is created automatically for each project, the path to the mnist data would be `hdfs.project_path() + 'Resources/mnist'`\n",
+    "The `hdfs` module provides a method to get the path in HopsFS where your data is stored, namely by calling `hdfs.project_path()`. The path resolves to the root path for your project, which is the view that you see when you click `Data Sets` in HopsWorks. To point where your actual data resides in the project you to append the full path from there to your Dataset. For example if you create a mnist folder in your Resources Dataset, the path to the mnist data would be `hdfs.project_path() + 'Resources/mnist'`\n",
+    "\n",
     "```python\n",
     "# Use this module to get the path to your project in HopsFS, then append the path to your Dataset in your project\n",
     "from hops import hdfs\n",
     "project_path = hdfs.project_path()\n",
     "```\n",
     "\n",
-    "![image11-Dataset-ProjectPath.png](../../images/datasets.png)"
+    "```python\n",
+    "# Downloading the mnist dataset to the current working directory\n",
+    "from hops import hdfs\n",
+    "mnist_hdfs_path = hdfs.project_path() + \"Resources/mnist\"\n",
+    "local_mnist_path = hdfs.copy_to_local(mnist_hdfs_path)\n",
+    "```\n",
+    "\n",
+    "### Documentation\n",
+    "See the following links to learn more about running experiments in Hopsworks\n",
+    "\n",
+    "- <a href=\"https://hopsworks.readthedocs.io/en/latest/hopsml/experiment.html\">Learn more about experiments</a>\n",
+    "<br>\n",
+    "- <a href=\"https://hopsworks.readthedocs.io/en/latest/hopsml/hopsML.html\">Building End-To-End pipelines</a>\n",
+    "<br>\n",
+    "- Give us a star, create an issue or a feature request on  <a href=\"https://github.com/logicalclocks/hopsworks\">Hopsworks github</a>\n",
+    "\n",
+    "### Managing experiments\n",
+    "Experiments service provides a unified view of all the experiments run using the `experiment` module.\n",
+    "<br>\n",
+    "As demonstrated in the gif it provides general information about the experiment and the resulting metric. Experiments can be visualized meanwhile or after training in a TensorBoard.\n",
+    "<br>\n",
+    "<br>\n",
+    "![Image7-Monitor.png](../../images/experiments.gif)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Spark application\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>0</td><td>application_1573301781748_0001</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1573301781748_0001/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1573301781748_0001_01_000001/demo_deep_learning_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparkSession available as 'spark'.\n"
+     ]
+    }
+   ],
    "source": [
     "def minimal_mnist():\n",
     "    import tensorflow as tf\n",
@@ -82,11 +147,11 @@
     "    x={\"x\": input(mnist.train)[0]},\n",
     "    y=input(mnist.train)[1],\n",
     "    num_epochs=None,\n",
-    "    batch_size=32,\n",
+    "    batch_size=16,\n",
     "    shuffle=True\n",
     "    )\n",
     "\n",
-    "    classifier.train(input_fn=train_input_fn, steps=300)\n",
+    "    classifier.train(input_fn=train_input_fn, steps=1000)\n",
     "\n",
     "    # Define the test inputs\n",
     "    test_input_fn = tf.estimator.inputs.numpy_input_fn(\n",
@@ -97,33 +162,33 @@
     "    )\n",
     "\n",
     "    # Evaluate accuracy\n",
-    "    accuracy_score = classifier.evaluate(input_fn=test_input_fn)[\"accuracy\"]\n",
-    "    print(\"\\nTest Accuracy: {0:f}%\\n\".format(accuracy_score*100))"
+    "    evaluate = classifier.evaluate(input_fn=test_input_fn)\n",
+    "    accuracy = evaluate[\"accuracy\"]\n",
+    "    loss = evaluate[\"loss\"]\n",
+    "    return {'accuracy': accuracy, 'loss': loss}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished Experiment \n",
+      "\n",
+      "('hdfs://10.0.2.15:8020/Projects/demo_deep_learning_admin000/Experiments/application_1573301781748_0001_1', {'accuracy': '0.8952', 'loss': '52.506138'})"
+     ]
+    }
+   ],
    "source": [
     "from hops import experiment\n",
     "from hops import hdfs\n",
     "experiment.launch(minimal_mnist,\n",
     "                  name='mnist estimator', \n",
     "                  description='A minimal mnist example with two hidden layers')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Monitoring execution - TensorBoard <a class=\"anchor\" id='tensorboard'></a>\n",
-    "To find the TensorBoard for the execution, please go back to HopsWorks and enter the Experiments service.\n",
-    "Then copy & paste the experiment_id into the textbox and press enter to start a TensorBoard to see all experiments being run in parallel.\n",
-    "\n",
-    "![Image7-Monitor.png](../../images/experiments_service.png)\n",
-    "![Image7-Monitor.png](../../images/tensorboard.png)"
    ]
   }
  ],
@@ -144,5 +209,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
