--- a/notebooks/ml/Parallel_Experiments/TensorFlow/grid_search/grid_search_fashion_mnist.ipynb
+++ b/notebooks/ml/Parallel_Experiments/TensorFlow/grid_search/grid_search_fashion_mnist.ipynb
@@ -7,69 +7,80 @@
     "# Getting started: Fashion Mnist on Hops Notebook\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 1.10</h3></font>\n",
-    "\n",
-    "In this notebook we are going to master running Deep Learning code on Hops using Jupyter notebooks and HopsFS, the highly efficient distributed file system that Hops provides. HopsFS is a fork of Apache HDFS and operations for reading and writing files to HopsFS is the same as with HDFS that TensorFlow supports.\n",
-    "For more information about how to read from HDFS, please see: https://www.tensorflow.org/deploy/hadoop\n",
-    "\n",
-    "In this example program we are going to:\n",
-    "- Run Fashion Mnist code using `tf.contrib.learn.Experiment` and `tf.estimator.Estimator`\n",
-    "- Using the hops python library to run TensorFlow on the Hops Platform\n",
-    "- Read data from a Dataset which is located in your project, on HopsFS (HDFS)\n",
-    "- Define a convolutional neural network\n",
-    "- Define a set of hyperparameters and values to perform gridsearch on\n",
-    "- Run training for each combination of hyperparameters using the Experiment API\n",
-    "- Monitor training using TensorBoard to see accuracy and loss for every hyperparameter configuration\n",
-    "- Monitoring training by looking at logs\n",
-    "- Find where the model and TensorBoard events for each hyperparameter configuration is saved in your project\n",
-    "- Visualize TensorBoard events from the previous TensorBoard run\n",
-    "\n",
-    "## Table of contents:\n",
-    "\n",
-    "### [TensorFlow on Hops](#paradigm)\n",
-    "### [Fashion Mnist training on Hops](#mnist)\n",
-    "### [Hyperparameter search](#hyperparam)\n",
-    "### [Launching TensorFlow jobs](#starting)\n",
-    "### [Monitoring execution - TensorBoard](#tensorboard)\n",
-    "### [Monitoring execution - Logs](#logs)\n",
-    "### [Increasing throughput - Running jobs in parallel](#parallel)\n",
-    "### [Show TensorBoard from previous runs](#visualize)\n"
+    "<font color='red'> <h3>Tested with TensorFlow 1.14.0</h3></font>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hops TensorFlow programming paradigm <a class=\"anchor\" id='paradigm'></a>\n",
+    "<p>\n",
+    "<h1>Machine Learning on <a href=\"https://github.com/logicalclocks/hopsworks\">Hopsworks\n",
+    "</a></h1> \n",
+    "</p>\n",
     "\n",
-    "To be able to run your TensorFlow code on Hops, the code for the whole program needs to be provided and put inside a wrapper function. Everything, from importing libraries to reading data and defining the model and running the program needs to be put inside a wrapper function. If you wish to run gridsearch over a given set of hyperparameters, you can define arguments for this wrapper function that corresponds to the name of your hyperparameters.\n",
-    "\n",
-    "You can also submit one or more `.py`, `.zip` or `.egg` files that contain your code and import them in the wrapper function. To include files, navigate back to HopsWorks and restart restart Jupyter, you can then include files in the Jupyter configuration.\n",
+    "![hops.png](../../../images/hops.png)\n",
     "\n",
     "## The `hops` python module\n",
     "\n",
-    "Below you can see the aforementioned wrapper function, which is coincidently named `wrapper` but could potentially be named anything. You can see two imports from the `hops` module, a `tensorboard` and an `hdfs` module. These are the only two modules that you will need to use in your TensorFlow wrapper function. \n",
+    "`hops` is a helper library for Hops that facilitates development by hiding the complexity of running applications and iteracting with services.\n",
+    "\n",
+    "Have a feature request or encountered an issue? Please let us know on <a href=\"https://github.com/logicalclocks/hops-util-py\">github</a>.\n",
+    "\n",
+    "### Using the `experiment` module\n",
+    "\n",
+    "To be able to run your Machine Learning code in Hopsworks, the code for the whole program needs to be provided and put inside a wrapper function. Everything, from importing libraries to reading data and defining the model and running the program needs to be put inside a wrapper function.\n",
+    "\n",
+    "The `experiment` module provides an api to Python programs such as TensorFlow, Keras and PyTorch on a Hopsworks on any number of machines and GPUs.\n",
+    "\n",
+    "An Experiment could be a single Python program, which we refer to as an **Experiment**. \n",
+    "\n",
+    "Grid search or genetic hyperparameter optimization such as differential evolution which runs several Experiments in parallel, which we refer to as **Parallel Experiment**. \n",
+    "\n",
+    "ParameterServerStrategy, CollectiveAllReduceStrategy and MultiworkerMirroredStrategy making multi-machine/multi-gpu training as simple as invoking a function for orchestration. This mode is referred to as **Distributed Training**.\n",
     "\n",
     "### Using the `tensorboard` module\n",
-    "The `tensorboard` module allow us to get the log directory for summaries and checkpoints to be written to the TensorBoard we will see in a bit. The only function that we currently need to call is `tensorboard.logdir()`, which returns the path to the TensorBoard log directory. Furthermore, the content of this directory will be put in as a Dataset in your project in HopsFS after each hyperparameter configuration is finished. The `experiment.launch` function, that we will look at abit further down will return the exact path, which you can then navigate to using HopsWorks to inspect the files.\n",
+    "The `tensorboard` module allow us to get the log directory for summaries and checkpoints to be written to the TensorBoard we will see in a bit. The only function that we currently need to call is `tensorboard.logdir()`, which returns the path to the TensorBoard log directory. Furthermore, the content of this directory will be put in as a Dataset in your project's Experiments folder.\n",
     "\n",
-    "The directory could in practice be used to store other data that should be accessible after each hyperparameter configuration is finished.\n",
+    "The directory could in practice be used to store other data that should be accessible after the experiment is finished.\n",
     "```python\n",
     "# Use this module to get the TensorBoard logdir\n",
     "from hops import tensorboard\n",
     "tensorboard_logdir = tensorboard.logdir()\n",
     "```\n",
     "\n",
-    "\n",
     "### Using the `hdfs` module\n",
-    "The `hdfs` module provides a single method to get the path in HopsFS where your data is stored, namely by calling `hdfs.project_path()`. The path resolves to the root path for your project, which is the view that you see when you click `Data Sets` in HopsWorks. To point where your actual data resides in the project you to append the full path from there to your Dataset. For example if you create a mnist folder in your Resources Dataset, which is created automatically for each project, the path to the mnist data would be `hdfs.project_path() + 'Resources/mnist`\n",
+    "The `hdfs` module provides a method to get the path in HopsFS where your data is stored, namely by calling `hdfs.project_path()`. The path resolves to the root path for your project, which is the view that you see when you click `Data Sets` in HopsWorks. To point where your actual data resides in the project you to append the full path from there to your Dataset. For example if you create a mnist folder in your Resources Dataset, the path to the mnist data would be `hdfs.project_path() + 'Resources/mnist'`\n",
+    "\n",
     "```python\n",
     "# Use this module to get the path to your project in HopsFS, then append the path to your Dataset in your project\n",
     "from hops import hdfs\n",
     "project_path = hdfs.project_path()\n",
     "```\n",
     "\n",
-    "![image11-Dataset-ProjectPath.png](../../../images/datasets.png)"
+    "```python\n",
+    "# Downloading the mnist dataset to the current working directory\n",
+    "from hops import hdfs\n",
+    "mnist_hdfs_path = hdfs.project_path() + \"Resources/mnist\"\n",
+    "local_mnist_path = hdfs.copy_to_local(mnist_hdfs_path)\n",
+    "```\n",
+    "\n",
+    "### Documentation\n",
+    "See the following links to learn more about running experiments in Hopsworks\n",
+    "\n",
+    "- <a href=\"https://hopsworks.readthedocs.io/en/latest/hopsml/experiment.html\">Learn more about experiments</a>\n",
+    "<br>\n",
+    "- <a href=\"https://hopsworks.readthedocs.io/en/latest/hopsml/hopsML.html\">Building End-To-End pipelines</a>\n",
+    "<br>\n",
+    "- Give us a star, create an issue or a feature request on  <a href=\"https://github.com/logicalclocks/hopsworks\">Hopsworks github</a>\n",
+    "\n",
+    "### Managing experiments\n",
+    "Experiments service provides a unified view of all the experiments run using the `experiment` module.\n",
+    "<br>\n",
+    "As demonstrated in the gif it provides general information about the experiment and the resulting metric. Experiments can be visualized meanwhile or after training in a TensorBoard.\n",
+    "<br>\n",
+    "<br>\n",
+    "![Image7-Monitor.png](../../../images/experiments.gif)"
    ]
   },
   {
@@ -100,11 +111,11 @@
     "    import numpy as np\n",
     "    from hops import tensorboard\n",
     "    from hops import hdfs\n",
-    "\n",
+    "    \n",
     "    # Training Parameters\n",
-    "    num_steps = 100\n",
-    "    batch_size = 128\n",
-    "\n",
+    "    num_steps = 30\n",
+    "    batch_size = 8\n",
+    "    \n",
     "    # Network Parameters\n",
     "    num_input = 784 # MNIST data input (img shape: 28*28)\n",
     "    num_classes = 10 # MNIST total classes (0-9 digits)\n",
@@ -262,9 +273,11 @@
     "\n",
     "    experiment.train_and_evaluate()\n",
     "    \n",
-    "    accuracy_score = mnist_estimator.evaluate(input_fn=eval_input_fn, steps=num_steps)[\"accuracy\"]\n",
+    "    evaluate = mnist_estimator.evaluate(input_fn=eval_input_fn, steps=num_steps)\n",
+    "    accuracy = evaluate[\"accuracy\"]\n",
+    "    loss = evaluate[\"loss\"]\n",
     "    \n",
-    "    return accuracy_score\n"
+    "    return {'accuracy': accuracy, 'loss': loss}"
    ]
   },
   {
@@ -308,15 +321,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Running the training using `experiment` module <a class=\"anchor\" id='starting'></a>\n",
-    "\n",
-    "The last, and arguably most important module that we demonstrate from the `hops` module is called `experiment`. The `experiment` module provides a function called `grid_search`. As arguments it simply takes the wrapper function and the dictionary with the hyperparameters. `experiment.grid_search` will simply create the grid of the arguments specified, run the wrapper function and inject the value of each hyperparameter. Assuming that you started Jupyter with the default configuration, each job will be run sequentially. To increase throughput by running two or more jobs in parallel, please see [this](#parallel)."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -326,21 +330,7 @@
     "from hops import hdfs\n",
     "\n",
     "notebook = hdfs.project_path() + \"Jupyter/Parallel_Experiments/TensorFlow/grid_search/grid_search_fashion_mnist.ipynb\"\n",
-    "experiment.grid_search(wrapper, args_dict, direction='max',\n",
-    "                       name='fashion mnist grid search', \n",
-    "                       description='Demonstration of running gridsearch hyperparameter optimization with fashion mnist',\n",
-    "                       versioned_resources=[notebook])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Monitoring execution - TensorBoard <a class=\"anchor\" id='tensorboard'></a>\n",
-    "To find the TensorBoard for the execution, please go back to HopsWorks and enter the Experiments service.\n",
-    "Then copy & paste the experiment_id into the textbox and press enter to start a TensorBoard to see all experiments being run in parallel.\n",
-    "![Image7-Monitor.png](../../../images/experiments_service.png)\n",
-    "![Image7-Monitor.png](../../../images/tensorboard.png)"
+    "experiment.grid_search(wrapper, args_dict, optimization_key='accuracy', direction='max')"
    ]
   }
  ],
@@ -361,5 +351,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
