[HOPSWORKS-34] Hudi for unified Stream/Batch processing
- Add hudi example notebook
- Add delta example notebook
- Update tour job to create hudi FG
- Update scala-tour-notebook to show Hudi example
- Update python-tour-notebook to demonstrate hudi-sync-tool

--- a/notebooks/featurestore/FeaturestoreTourPython.ipynb
+++ b/notebooks/featurestore/FeaturestoreTourPython.ipynb
@@ -83,7 +83,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>63</td><td>application_1563552731330_0082</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1563552731330_0082/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1563552731330_0082_01_000001/demo_featurestore_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>36</td><td>application_1567416459580_0039</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1567416459580_0039/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1567416459580_0039_01_000001/demo_featurestore_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1845,6 +1845,135 @@
    ],
    "source": [
     "featurestore.get_featuregroup_partitions(\"games_features_partitioned\").show(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Synchronize a Hive Table with the Feature Store\n",
+    "\n",
+    "The Feature Store SDK supports method for synchronizing existing Hive tables with the feature store, using `syncHiveTableWithFeaturestore`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create an example Hive Table (praxis in the feature store is to have `_version` suffix on the table):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import SQLContext\n",
+    "from pyspark.sql.types import StructType, StructField, StringType, TimestampType, LongType, IntegerType, FloatType\n",
+    "sqlContext = SQLContext(sc)\n",
+    "schema = StructType([StructField(\"equipo_id\", IntegerType(), True),\n",
+    "                     StructField(\"equipo_presupuesto\", FloatType(), True),\n",
+    "                     StructField(\"equipo_posicion\", IntegerType(), True)\n",
+    "                        ])\n",
+    "sample_df = sqlContext.createDataFrame([(999, 41251.52, 1), (998, 1319.4, 8), (997, 21219.1, 2)], schema)\n",
+    "spark.sql(\"use {}\".format(featurestore.project_featurestore()))\n",
+    "sample_df.write.mode(\"overwrite\").saveAsTable(\"hive_fs_sync_example_1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------------------------------+------------------------------------+-----------+\n",
+      "|database                               |tableName                           |isTemporary|\n",
+      "+---------------------------------------+------------------------------------+-----------+\n",
+      "|demo_featurestore_admin000_featurestore|attendances_features_1              |false      |\n",
+      "|demo_featurestore_admin000_featurestore|games_features_1                    |false      |\n",
+      "|demo_featurestore_admin000_featurestore|games_features_hudi_tour_1          |false      |\n",
+      "|demo_featurestore_admin000_featurestore|hello_hudi_1                        |false      |\n",
+      "|demo_featurestore_admin000_featurestore|hive_fs_sync_example_1              |false      |\n",
+      "|demo_featurestore_admin000_featurestore|hudi_featuregroup_test_1            |false      |\n",
+      "|demo_featurestore_admin000_featurestore|hudi_featuregroup_test_second_1     |false      |\n",
+      "|demo_featurestore_admin000_featurestore|hudi_featuregroup_test_tour_1       |false      |\n",
+      "|demo_featurestore_admin000_featurestore|hudi_featuregroup_test_tour_second_1|false      |\n",
+      "|demo_featurestore_admin000_featurestore|players_features_1                  |false      |\n",
+      "|demo_featurestore_admin000_featurestore|season_scores_features_1            |false      |\n",
+      "|demo_featurestore_admin000_featurestore|teams_features_1                    |false      |\n",
+      "+---------------------------------------+------------------------------------+-----------+"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql(\"show tables\").show(20, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Synchronizing Hive Table: hive_fs_sync_example with Feature Store: demo_featurestore_admin000_featurestore\n",
+      "Hive Table: hive_fs_sync_example was successfully synchronized with Feature Store: demo_featurestore_admin000_featurestore"
+     ]
+    }
+   ],
+   "source": [
+    "featurestore.sync_hive_table_with_featurestore(\"hive_fs_sync_example\", \n",
+    "                                               description=\"test Hive sync\", \n",
+    "                                               featuregroup_version=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['games_features_1', 'games_features_on_demand_tour_1', 'season_scores_features_1', 'attendances_features_1', 'players_features_1', 'teams_features_1', 'hello_hudi_1', 'hudi_featuregroup_test_1', 'hudi_featuregroup_test_second_1', 'hudi_featuregroup_test_tour_1', 'hudi_featuregroup_test_tour_second_1', 'games_features_hudi_tour_1', 'hive_fs_sync_example_1']"
+     ]
+    }
+   ],
+   "source": [
+    "featurestore.get_featuregroups()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running sql: use demo_featurestore_admin000_featurestore\n",
+      "SQL string for the query created successfully\n",
+      "Running sql: SELECT * FROM hive_fs_sync_example_1\n",
+      "+---------+------------------+---------------+\n",
+      "|equipo_id|equipo_presupuesto|equipo_posicion|\n",
+      "+---------+------------------+---------------+\n",
+      "|      998|            1319.4|              8|\n",
+      "|      997|           21219.1|              2|\n",
+      "|      999|          41251.52|              1|\n",
+      "+---------+------------------+---------------+"
+     ]
+    }
+   ],
+   "source": [
+    "featurestore.get_featuregroup(\"hive_fs_sync_example\").show(5)"
    ]
   },
   {
