[HOPSWORKS-1264] [featurestore] import functionality (#80)

--- a/notebooks/featurestore/FeaturestoreTourScala.ipynb
+++ b/notebooks/featurestore/FeaturestoreTourScala.ipynb
@@ -2006,6 +2006,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Import External Feature Datasets to the Feature Store\n",
+    "\n",
+    "Feature datasets stored externally to Hopsworks can be imported using the `importFeaturegroup` operation in the Featurestore SDK. For example, say that you have a dataset stored on S3 that you want to import. To import the dataset from S3, first configure an s3 connector for your feature store, e.g with name `my_s3_connector`. The connector is used for authenticating with S3 and for specifying your bucket name. Once the connector is configured, you can use the `importFeaturegroup` operation as follows:\n",
+    "```scala\n",
+    "Hops.importFeaturegroup(featuregroup_name)\n",
+    "    .setExternalPath(s3_bucket_path)\n",
+    "    .setStorageConnector(\"my_s3_connector\")\n",
+    "    .setDataFormat(\"tfrecords\")\n",
+    "    .write\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Feature Group Statistics\n",
     "\n",
     "Statistics about a featuregroup can be useful in the stage of feature engineering and when deciding which features to use for training. If statistics have been computed for a feature group, it can be viewed in the Hopsworks Feature Registry UI. \n",
