--- a/notebooks/featurestore/FeaturestoreTourPython.ipynb
+++ b/notebooks/featurestore/FeaturestoreTourPython.ipynb
@@ -2380,6 +2380,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Import External Feature Datasets to the Feature Store\n",
+    "\n",
+    "Feature datasets stored externally to Hopsworks can be imported using the `import_featuregroup` primitive in the Featurestore SDK. For example, say that you have a dataset stored on S3 that you want to import. To import the dataset from S3, first configure an s3 connector for your feature store, e.g with name `my_s3_connector`. The connector is used for authenticating with S3 and for specifying your bucket name. Once the connector is configured, you can use the `import_featuregroup` function as follows:\n",
+    "```python\n",
+    "from hops import featurestore\n",
+    "featurestore.import_featuregroup(\"my_s3_connector\", s3_bucket_path, \"fg_name\", data_format=\"tfrecords\")\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Integrating the Feature Store with Pandas and Numpy\n",
     "\n",
     "The Hops Feature Store works natively with Spark, but you can easily connect it to your numpy/pandas/pure python pipelines as well (just recall that if you are working with big data, using libraries like numpy/pandas that are not distributed will not scale."
