Fix image links

--- a/notebooks/featurestore/aws/SageMakerFeaturestoreTourPython.ipynb
+++ b/notebooks/featurestore/aws/SageMakerFeaturestoreTourPython.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "Which will produce the following model of feature groups in your project's feature store:\n",
     "\n",
-    "![Feature Store Model](./images/model.png \"Feature Store Model\")\n",
+    "![Feature Store Model](../images/model.png \"Feature Store Model\")\n",
     "\n",
     "In this notebook we will run queries over this feature store model. We will also create new feature groups and training datasets.\n",
     "\n",
@@ -118,7 +118,7 @@
     "\n",
     "Feature Stores can be shared across projects in a multi-tenant manner, just like any Hopsworks-dataset can. You can read more about sharing datasets at [hops.io](hops.io), but in essence to share a dataset you just have to right click on it in your project. The feature groups in the feature store are located in a dataset called `<project_name>_featurestore.db` in your project.\n",
     "\n",
-    "![Share Feature Store](./images/share_featurestore.png \"Share Feature Store\")"
+    "![Share Feature Store](../images/share_featurestore.png \"Share Feature Store\")"
    ]
   },
   {
@@ -149,7 +149,7 @@
     "\n",
     "The feature store can be queried programmatically and with raw SQL. When you query the feature store programmatically, the library will infer how to fetch the different features using a **query planner**. \n",
     "\n",
-    "![Feature Store Query Planner](./images/query_optimizer.png \"Feature Store Query Planner\")\n",
+    "![Feature Store Query Planner](../images/query_optimizer.png \"Feature Store Query Planner\")\n",
     "\n",
     "When interacting with the feature store it is sufficient to be familiar with three concepts:\n",
     "\n",
@@ -159,7 +159,7 @@
     "\n",
     "A feature group contains a group of features and a training dataset contains a set of features, potentially from many different feature groups.\n",
     "\n",
-    "![Feature Store Concepts](./images/concepts.png \"Feature Store Contents\")\n",
+    "![Feature Store Concepts](../images/concepts.png \"Feature Store Contents\")\n",
     "\n",
     "When you query the feature store you will always get back the results in a pandas dataframe. This is for scalability reasons. If the dataset is small and you want to work with it in memory you can convert it into a pandas dataframe or a numpy matrix using one line of code as we will demonstrate later on in this notebook."
    ]
