--- a/notebooks/tfx/chicago_taxi/pipeline/1.ComputeStatistics.ipynb
+++ b/notebooks/tfx/chicago_taxi/pipeline/1.ComputeStatistics.ipynb
@@ -113,9 +113,10 @@
     }
    ],
    "source": [
-    "import requests, zipfile, StringIO\n",
+    "import requests, zipfile\n",
+    "from io import BytesIO\n",
     "r = requests.get(\"http://snurran.sics.se/hops/beam/chicago_taxi_data.zip\", stream=True)\n",
-    "z = zipfile.ZipFile(StringIO.StringIO(r.content))\n",
+    "z = zipfile.ZipFile(BytesIO(r.content))\n",
     "z.extractall()\n",
     "\n",
     "# Copy data into resources\n",
