--- a/notebooks/tfx/chicago_taxi/chicago_taxi_tfx_hopsworks.ipynb
+++ b/notebooks/tfx/chicago_taxi/chicago_taxi_tfx_hopsworks.ipynb
@@ -88,9 +88,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests, zipfile, StringIO\n",
+    "import requests, zipfile\n",
+    "from io import BytesIO\n",
     "r = requests.get(\"http://snurran.sics.se/hops/beam/chicago_taxi_data.zip\", stream=True)\n",
-    "z = zipfile.ZipFile(StringIO.StringIO(r.content))\n",
+    "z = zipfile.ZipFile(BytesIO(r.content))\n",
     "z.extractall()\n",
     "\n",
     "# Copy data into resources\n",
